<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ShAirCardDroidActivity!</string>
    <string name="app_name">ShAirCardDroid</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="people_count">People count</string>
    <string name="event">Event</string>
    <string name="vcard">VCard</string>
    <string name="photo">Photo</string>
    <string name="company">Company</string>
    <string name="save">Save</string>
    <string name="add_vcard">add VCard</string>
    <string name="phone">Phone</string>
    <string name="main_question">Currently at this event?</string>
    <string name="add_contact">Add contact?</string>
    <string name="add_contact_to_book">Add contact to your contact book?</string>

</resources>